@@ -95,8 +95,10 @@
 
 % These are the namespace already declared by the stream opening. This is
 % used at serialization time.
--define(DEFAULT_NS, [?NS_JABBER_SERVER]).
--define(PREFIXED_NS, [{?NS_XMPP, "stream"}, {?NS_JABBER_DIALBACK, "db"}]).
+-define(DEFAULT_NS, ?NS_JABBER_SERVER).
+-define(PREFIXED_NS, [
+  {?NS_XMPP, ?NS_XMPP_pfx}, {?NS_DIALBACK, ?NS_DIALBACK_pfx}
+]).
 
 %%%----------------------------------------------------------------------
 %%% API
@@ -159,7 +161,7 @@ init([{SockMod, Socket}, Opts]) ->
 
 wait_for_stream({xmlstreamstart, Opening}, StateData) ->
     case {exmpp_stream:get_default_ns(Opening),
-	  exmpp_xml:is_ns_declared_here(Opening, ?NS_JABBER_DIALBACK),
+	  exmpp_xml:is_ns_declared_here(Opening, ?NS_DIALBACK),
 	  exmpp_stream:get_version(Opening) == {1, 0}} of
 	{?NS_JABBER_SERVER, _, true} when
 	      StateData#state.tls and (not StateData#state.authenticated) ->
@@ -240,7 +242,7 @@ wait_for_feature_request({xmlstreamelement, El}, StateData) ->
 	    ?DEBUG("starttls", []),
 	    Socket = StateData#state.socket,
 	    Proceed = exmpp_xml:document_fragment_to_list(
-	      exmpp_server_tls:proceed(), ?DEFAULT_NS, ?PREFIXED_NS),
+	      exmpp_server_tls:proceed(), [?DEFAULT_NS], ?PREFIXED_NS),
 	    TLSOpts = StateData#state.tls_options,
 	    TLSSocket = (StateData#state.sockmod):starttls(
 			  Socket, TLSOpts,
@@ -388,7 +390,7 @@ stream_established({xmlstreamelement, El}, StateData) ->
 	    % XXX No namespace conversion (:server <-> :client) is done.
 	    % This is handled by C2S and S2S send_element functions.
 	    ElOld = exmpp_xml:xmlel_to_xmlelement(El,
-	      ?DEFAULT_NS, ?PREFIXED_NS),
+	      [?DEFAULT_NS], ?PREFIXED_NS),
 	    if
 		(To /= error) and (From /= error) ->
 		    LFrom = From#jid.ldomain,
@@ -561,13 +563,13 @@ send_text(StateData, Text) ->
 
 
 send_element(StateData, #xmlel{ns = ?NS_XMPP, name = 'stream'} = El) ->
-    send_text(StateData, exmpp_xml:document_to_list(El));
+    send_text(StateData, exmpp_stream:to_list(El));
 send_element(StateData, #xmlel{ns = ?NS_JABBER_CLIENT} = El) ->
-    send_text(StateData, exmpp_xml:document_fragment_to_list(El,
-      [?NS_JABBER_CLIENT], ?PREFIXED_NS));
+    send_text(StateData, exmpp_stanza:to_list(El,
+	?NS_JABBER_CLIENT, ?PREFIXED_NS));
 send_element(StateData, El) ->
-    send_text(StateData, exmpp_xml:document_fragment_to_list(El,
-      ?DEFAULT_NS, ?PREFIXED_NS)).
+    send_text(StateData, exmpp_stanza:to_list(El,
+	?DEFAULT_NS, ?PREFIXED_NS)).
 
 
 change_shaper(StateData, Host, JID) ->
@@ -590,14 +592,14 @@ cancel_timer(Timer) ->
     end.
 
 
-is_key_packet(#xmlel{ns = ?NS_JABBER_DIALBACK, name = 'result',
+is_key_packet(#xmlel{ns = ?NS_DIALBACK, name = 'result',
   attrs = Attrs} = El) ->
     {key,
      exmpp_stanza:get_recipient_from_attrs(Attrs),
      exmpp_stanza:get_sender_from_attrs(Attrs),
      exmpp_stanza:get_id_from_attrs(Attrs),
      exmpp_xml:get_cdata_as_list(El)};
-is_key_packet(#xmlel{ns = ?NS_JABBER_DIALBACK, name = 'verify',
+is_key_packet(#xmlel{ns = ?NS_DIALBACK, name = 'verify',
   attrs = Attrs} = El) ->
     {verify,
      exmpp_stanza:get_recipient_from_attrs(Attrs),
